force-app/main/default/objects/Session__c/fields/Calculated_Practitioner_Fees__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Practitioner_Fees__c</fullName>
    <formula>(Contact_Hours__c *  Practitioner_Fee_Rate__r.Hourly_Rate__c) + ((Contact_Hours__c *  Practitioner_Fee_Rate__r.Hourly_Rate__c) *  Course__r.Practitioner_Fee_Uplift__c ) - ((Contact_Hours__c *  Practitioner_Fee_Rate__r.Hourly_Rate__c) *  Course__r.Practitioner_Fee_Discount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Practitioner Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>