force-app/main/default/objects/Session__c/fields/Capacity_PSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Capacity_PSA_Name__c</fullName>
    <formula>Course__r.Branch__r.Capacity_PSA__r.FirstName + &quot; &quot; + Course__r.Branch__r.Capacity_PSA__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Capacity PSA Name</label>
    <type>Text</type>
</CustomField>