force-app/main/default/objects/Session__c/fields/Confirmation_Email_Information__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Information__c</fullName>
    <label>Confirmation Email Information</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>