force-app/main/default/objects/Session__c/fields/Confirmation_Email_Text__c.field-meta.xml
<CustomField>
    <fullName>Confirmation_Email_Text__c</fullName>
    <label>Confirmation Email Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>