force-app/main/default/objects/Session__c/fields/Contact_Hours__c.field-meta.xml
<CustomField>
    <fullName>Contact_Hours__c</fullName>
    <formula>(((End__c-Start__c)/60000) - Lunch_Break_Minutes__c )/60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>