force-app/main/default/objects/Session__c/fields/Course_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Course_Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Assignment</label>
    <referenceTo>Course_Assignment__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>