force-app/main/default/objects/Session__c/fields/Course_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_End_Date__c</fullName>
    <formula>Course__r.End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course End Date</label>
    <type>Date</type>
</CustomField>