force-app/main/default/objects/Session__c/fields/Course_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Course_Start_Date__c</fullName>
    <formula>Course__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Course Start Date</label>
    <type>Date</type>
</CustomField>