force-app/main/default/objects/Session__c/fields/Delivery_Type__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Type__c</fullName>
    <label>Delivery Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Physical</fullName>
                <default>true</default>
                <label>Physical</label>
            </value>
            <value>
                <fullName>Online</fullName>
            </value>
            <value>
                <fullName>Virtual Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>