force-app/main/default/objects/Session__c/fields/Eligible_for_Claim__c.field-meta.xml
<CustomField>
    <fullName>Eligible_for_Claim__c</fullName>
    <formula>AND(ISPICKVAL(Course__r.Status__c, &#39;Final&#39;),ISPICKVAL(Course_Assignment__r.Status__c, &#39;Approved&#39;), ISPICKVAL(Status__c, &#39;Confirmed&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eligible for Claim</label>
    <type>Checkbox</type>
</CustomField>