force-app/main/default/objects/Session__c/fields/End_Text__c.field-meta.xml
<CustomField>
    <fullName>End_Text__c</fullName>
    <formula>LEFT( TEXT(End__c), 5 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End Text</label>
    <type>Text</type>
</CustomField>