force-app/main/default/objects/Session__c/fields/Enquiries_PSA_Name__c.field-meta.xml
<CustomField>
    <fullName>Enquiries_PSA_Name__c</fullName>
    <formula>Course__r.Branch__r.Enquiries_PSA__r.FirstName + &quot; &quot; + Course__r.Branch__r.Enquiries_PSA__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Enquiries PSA Name</label>
    <type>Text</type>
</CustomField>