force-app/main/default/objects/Session__c/fields/Fee_Rate_Date__c.field-meta.xml
<CustomField>
    <fullName>Fee_Rate_Date__c</fullName>
    <formula>IF(ISBLANK(Date__c), Course__r.End_Date__c, Date__c)</formula>
    <label>Fee Rate Date</label>
    <type>Date</type>
</CustomField>