force-app/main/default/objects/Session__c/fields/Is_Location_At_Home__c.field-meta.xml
<CustomField>
    <fullName>Is_Location_At_Home__c</fullName>
    <formula>OR(
  NOT(ISBLANK(Venue__r.Host__c)), 
  NOT(ISBLANK(Parent_Host__c)) 
)</formula>
    <label>Is Location At Home</label>
    <type>Checkbox</type>
</CustomField>