force-app/main/default/objects/Session__c/fields/IsPublicVenue__c.field-meta.xml
<CustomField>
    <fullName>IsPublicVenue__c</fullName>
    <formula>NOT(ISPICKVAL(Venue__r.Type__c, &#39;Parent Home&#39;))  &amp;&amp; NOT(ISPICKVAL(Venue__r.Type__c, &#39;Practitioner Home&#39;)) &amp;&amp; NOT(ISPICKVAL(Venue__r.Type__c, &#39;Volunteer Home&#39;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Public Venue</label>
    <type>Checkbox</type>
</CustomField>