force-app/main/default/objects/Session__c/fields/Location_Home_Information__c.field-meta.xml
<CustomField>
    <fullName>Location_Home_Information__c</fullName>
    <formula>IF(ISBLANK(Parent_Host__c), 
 IF(ISBLANK(Venue__r.Host__c), &#39;&#39;, &quot;Course Leader&#39;s Home&quot;) 
,&quot;Parent&#39;s Home&quot;)</formula>
    <label>Location Home Information</label>
    <type>Text</type>
</CustomField>