force-app/main/default/objects/Session__c/fields/Location_Id__c.field-meta.xml
<CustomField>
    <fullName>Location_Id__c</fullName>
    <formula>IF(ISBLANK(Venue__c),
  IF(ISBLANK(Parent_Host__c), &apos;&apos;, Parent_Host__c),
  IF(ISBLANK(Room__c), Venue__c, Room__c)
)</formula>
    <label>Location Id</label>
    <type>Text</type>
</CustomField>