force-app/main/default/objects/Session__c/fields/Location_Map_Url__c.field-meta.xml
<CustomField>
    <fullName>Location_Map_Url__c</fullName>
    <formula>IF( NOT( ISBLANK(Venue__c) ),
IF( ISBLANK( Venue__r.Host__c),
Venue__r.Map_Url__c,
&quot;https://www.google.co.uk/maps?q=&quot; &amp; Venue__r.Host__r.MailingPostalCode
),
&quot;https://www.google.co.uk/maps?q=&quot; &amp;  Parent_Host__r.MailingPostalCode
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location Map Url</label>
    <type>Text</type>
</CustomField>