force-app/main/default/objects/Session__c/fields/Location_Name__c.field-meta.xml
<CustomField>
    <fullName>Location_Name__c</fullName>
    <formula>IF( NOT( ISBLANK(Venue__c) ),
 IF( ISBLANK( Venue__r.Host__c ),
  Venue__r.Name,
  Venue__r.Host__r.FirstName + &#39; &#39; + Venue__r.Host__r.LastName + &quot;&#39;s home&quot;
 ),
 Parent_Host__r.FirstName + &#39; &#39; + Parent_Host__r.LastName + &quot;&#39;s home&quot;
)</formula>
    <label>Location Name</label>
    <type>Text</type>
</CustomField>