force-app/main/default/objects/Session__c/fields/Location_Town__c.field-meta.xml
<CustomField>
    <fullName>Location_Town__c</fullName>
    <formula>IF( NOT( ISBLANK(Venue__c) ),
 IF( ISBLANK( Venue__r.Host__c ),
  Venue__r.Town__c,
  Venue__r.Host__r.MailingCity
 ),
 Parent_Host__r.MailingCity
)</formula>
    <label>Location Town</label>
    <type>Text</type>
</CustomField>