force-app/main/default/objects/Session__c/fields/Lunchbreak_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Lunchbreak_Minutes__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Lunchbreak Minutes</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>