force-app/main/default/objects/Session__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Despite Venue_Address__c exposes ParenHost address, there exists a validation rule Selection_parent_host_venue_rule that prevents filling ParenHost if venue is filled.
So NOT(ISBLANK(Venue__c)) will exclude private information.</description>
    <formula>Additional_Information__c &amp; 
IF(
 AND(NOT(ISBLANK(Venue__c)),Venue__c &lt;&gt; Course__r.Main_Venue__c),
 BR() &amp; &quot;This session will be held at&quot; &amp; BR() &amp; Venue_Address__c,
 &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notes</label>
    <type>Text</type>
</CustomField>