force-app/main/default/objects/Session__c/fields/Parent_Host__c.field-meta.xml
<CustomField>
    <fullName>Parent_Host__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Host</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Incorrect input. The Session must be of Type Reunion to set this field</errorMessage>
        <filterItems>
            <field>$Source.Type__c</field>
            <operation>equals</operation>
            <value>Reunion</value>
        </filterItems>
        <infoMessage>The Session must be of Type Reunion to set this field</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sessions (Parent Host)</relationshipLabel>
    <relationshipName>Sessions1</relationshipName>
    <type>Lookup</type>
</CustomField>