force-app/main/default/objects/Session__c/fields/Practitioner_Chosen__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Chosen__c</fullName>
    <formula>IF( ISBLANK(Practitioner__c) ,false, true )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner Chosen</label>
    <type>Checkbox</type>
</CustomField>