force-app/main/default/objects/Session__c/fields/Practitioner_Chosen_Assistant__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Chosen_Assistant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Practitioner Chosen Assistant</label>
    <type>Checkbox</type>
</CustomField>