force-app/main/default/objects/Session__c/fields/Practitioner_Email__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Email__c</fullName>
    <formula>Practitioner__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner Email</label>
    <type>Text</type>
</CustomField>