force-app/main/default/objects/Session__c/fields/Practitioner_Fee_Rate__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Fee_Rate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner Fee Rate</label>
    <referenceTo>Practitioner_Fee_Rate__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>