force-app/main/default/objects/Session__c/fields/Practitioner_Fees__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Fees__c</fullName>
    <formula>IF(ISBLANK(Session_Fee_Override__c), Calculated_Practitioner_Fees__c, Session_Fee_Override__c)</formula>
    <label>Practitioner Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>