force-app/main/default/objects/Session__c/fields/Practitioner_Fees_to_Claim__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Fees_to_Claim__c</fullName>
    <formula>Practitioner_Fees__c - Sum_Of_Purchase_Line_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner Fees to Claim</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>