force-app/main/default/objects/Session__c/fields/Practitioner_Id__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Id__c</fullName>
    <formula>CASESAFEID(Practitioner_Licence__r.Contact_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner_Id</label>
    <type>Text</type>
</CustomField>