force-app/main/default/objects/Session__c/fields/Practitioner_Licence__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Licence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practitioner Licence</label>
    <referenceTo>Licence_To_Practice__c</referenceTo>
    <relationshipLabel>Sessions</relationshipLabel>
    <relationshipName>Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>