force-app/main/default/objects/Session__c/fields/Practitioner_Name__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Name__c</fullName>
    <formula>Practitioner__r.FirstName  &amp; &#39; &#39; &amp;  Practitioner__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner Name</label>
    <type>Text</type>
</CustomField>