force-app/main/default/objects/Session__c/fields/Practitioner_Phone__c.field-meta.xml
<CustomField>
    <fullName>Practitioner_Phone__c</fullName>
    <formula>Practitioner__r.Phone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitioner Phone</label>
    <type>Text</type>
</CustomField>