force-app/main/default/objects/Session__c/fields/PractitionerId__c.field-meta.xml
<CustomField>
    <fullName>PractitionerId__c</fullName>
    <formula>CASESAFEID(Practitioner_Licence__r.ContactId__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PractitionerId</label>
    <type>Text</type>
</CustomField>