force-app/main/default/objects/Session__c/fields/Practitoner_Name__c.field-meta.xml
<CustomField>
    <fullName>Practitoner_Name__c</fullName>
    <formula>Practitioner_Licence__r.Practitioner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practitoner Name</label>
    <type>Text</type>
</CustomField>