force-app/main/default/objects/Session__c/fields/Purchase_Line_Items_Amount__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Line_Items_Amount__c</fullName>
    <formula>Practitioner_Fees__c - Sum_Of_Purchase_Line_Items__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Purchase Line Items Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>