force-app/main/default/objects/Session__c/fields/Reunion_Online_Practitioner_Message__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Online_Practitioner_Message__c</fullName>
    <formula>IF(ISPICKVAL(Delivery_Type__c, &quot;Online&quot;), 
 IF(ISBLANK(Venue__c), 
     &quot;Thank you for agreeing to facilitate the &quot; + TEXT( Course__r.Sub_Type__c ) + &quot; reunion. All the confirmed clients on the course have now received a reunion confirmation email.&quot;
     + &quot;They have been informed that the reunion will be held on &quot;
     + Day_of_Week__c + &quot; &quot;
     + TEXT(Date__c) + &quot; from &quot;
     + Start_Text__c + &quot; to &quot;
     + End_Text__c 
     + &quot; and that it will be a live, interactive online session for which they will receive Zoom access details nearer the time.&quot; 
     + BR() + BR()
,  

     &quot;Thank you for agreeing to facilitate the &quot; + TEXT( Course__r.Sub_Type__c ) + &quot; reunion. All the confirmed clients on the course have now received a reunion confirmation email.&quot; 
     + &quot;They have been informed that the reunion will be held on &quot;  
     + Day_of_Week__c + &quot; &quot;
     + TEXT(Date__c) + &quot; from &quot;
     + Start_Text__c + &quot; to &quot; 
     + End_Text__c
     + &quot; and that you will be a live, interactive online session for which they have been sent the Zoom access details.&quot; 
     + BR() + BR()
)
, &quot;&quot;)</formula>
    <label>Reunion Online Practitioner Message</label>
    <type>Text</type>
</CustomField>