force-app/main/default/objects/Session__c/fields/Reunion_Physical_Practitioner_Message__c.field-meta.xml
<CustomField>
    <fullName>Reunion_Physical_Practitioner_Message__c</fullName>
    <formula>IF(ISPICKVAL(Delivery_Type__c, &quot;Physical&quot;), 
  IF(ISBLANK(Venue__c), 
       &quot;Thank you for agreeing to facilitate the &quot; + TEXT( Course__r.Sub_Type__c ) + &quot; reunion. All the confirmed clients on the course have now received a reunion confirmation email.&quot;
     + &quot;They have been informed that the reunion will be held on &quot;
     + Day_of_Week__c + &quot; &quot;
     + TEXT(Date__c) + &quot; from &quot;
     + Start_Text__c + &quot; to &quot;
     + End_Text__c 
     + &quot; and that you will confirm the venue with them nearer the time.&quot; 
     + BR() + BR()
,  

     &quot;Thank you for agreeing to facilitate the &quot; + TEXT( Course__r.Sub_Type__c ) + &quot; reunion. All the confirmed clients on the course have now received a reunion confirmation email.&quot; 
     + &quot;They have been informed that the reunion will be held on &quot;  
     + Day_of_Week__c + &quot; &quot;
     + TEXT(Date__c) + &quot; from &quot;
     + Start_Text__c + &quot; to &quot; 
     + End_Text__c
     + &quot; at: &quot; 
     + BR() + BR()
     + Venue_Address__c
     + HYPERLINK(Location_Map_Url__c, &quot;Click  here to see this on a map&quot;)
     + BR() + BR()
)

, &quot;&quot;)</formula>
    <label>Reunion Physical Practitioner Message</label>
    <type>Text</type>
</CustomField>