force-app/main/default/objects/Session__c/fields/Session_Fee_Override__c.field-meta.xml
<CustomField>
    <fullName>Session_Fee_Override__c</fullName>
    <label>Session Fee Override</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>