force-app/main/default/objects/Session__c/fields/Session_Info_For_Flow__c.field-meta.xml
<CustomField>
    <fullName>Session_Info_For_Flow__c</fullName>
    <formula>CASE(
WEEKDAY(Date__c),
2, &#39;MON&#39;,
3, &#39;TUE&#39;,
4, &#39;WED&#39;,
5, &#39;THU&#39;,
6, &#39;FRI&#39;,
7, &#39;SAT&#39;,
1, &#39;SUN&#39;,
NULL
)
+ &#39; &#39; +
TEXT(DAY(Date__c))
+ &#39; &#39; +
CASE(
MONTH(Date__c),
1, &#39;January&#39;,
2, &#39;February&#39;,
3, &#39;March&#39;,
4, &#39;April&#39;,
5, &#39;May&#39;,
6, &#39;June&#39;,
7, &#39;July&#39;,
8, &#39;August&#39;,
9, &#39;September&#39;,
10, &#39;October&#39;,
11, &#39;November&#39;,
12, &#39;December&#39;,
null
)
+ &#39;    &#39; +
TEXT(HOUR(Start__c))
+ &#39;:&#39; +
RPAD(TEXT(MINUTE(Start__c)), 2, &#39;0&#39;)
+ &#39; - &#39; +
TEXT(HOUR(End__c))
+ &#39;:&#39; +
RPAD(TEXT(MINUTE(End__c)), 2, &#39;0&#39;)
+ IF(AND(Lunch_Break_Minutes__c != 0, !ISNULL(Lunch_Break_Minutes__c)), &#39; Includes a &#39; &amp; TEXT(Lunch_Break_Minutes__c)  &amp; &#39; min break. &#39;, &#39; &#39;)
+ IF( ISPICKVAL(Specific_Attendee_Type__c, &#39;&#39;), &#39; &#39;, TEXT(Specific_Attendee_Type__c) &amp; &#39;. &#39;)
+ IF(OR( ISPICKVAL(Type__c, &#39;Reunion&#39;), ISPICKVAL(Type__c, &#39;Breastfeeding&#39;) ), TEXT(Type__c) &amp; &#39; session. &#39;, &#39; &#39;)
+ BR()</formula>
    <label>Session Info For Flow</label>
    <type>Text</type>
</CustomField>