force-app/main/default/objects/Session__c/fields/Session_Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Session_Room_Name__c</fullName>
    <formula>Room__r.Name</formula>
    <label>Session Room Name</label>
    <type>Text</type>
</CustomField>