force-app/main/default/objects/Session__c/fields/Session_Type__c.field-meta.xml
<CustomField>
    <fullName>Session_Type__c</fullName>
    <formula>TEXT(Type__c) &amp; IF(ISPICKVAL(Delivery_Type__c, &#39;Physical&#39;), &#39;&#39;, &#39; &#39; &amp; TEXT(Delivery_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Session Type</label>
    <type>Text</type>
</CustomField>