force-app/main/default/objects/Session__c/fields/SessionDescConcatenated__c.field-meta.xml
<CustomField>
    <fullName>SessionDescConcatenated__c</fullName>
    <formula>&quot;&lt;b&gt;Course Reference:&lt;/b&gt; &quot;+ Course__r.Name + 
&quot;&lt;b&gt; | Session Name: &lt;/b&gt;&quot;+ Name +
&quot;&lt;b&gt; | Session Fees: &lt;/b&gt;£&quot;+ TEXT(Practitioner_Fees__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SessionDescConcatenated</label>
    <type>Text</type>
</CustomField>