force-app/main/default/objects/Session__c/fields/Specific_Attendee_Type__c.field-meta.xml
<CustomField>
    <fullName>Specific_Attendee_Type__c</fullName>
    <label>Specific Attendee Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>--None--</fullName>
                <default>true</default>
                <label>--None--</label>
            </value>
            <value>
                <fullName>Women Only</fullName>
            </value>
            <value>
                <fullName>Pregnant Women Only</fullName>
            </value>
            <value>
                <fullName>Birth Partners Only</fullName>
            </value>
            <value>
                <fullName>Birth Partners Welcome</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>