force-app/main/default/objects/Session__c/fields/Start_Text__c.field-meta.xml
<CustomField>
    <fullName>Start_Text__c</fullName>
    <formula>LEFT( TEXT(Start__c), 5 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start Text</label>
    <type>Text</type>
</CustomField>