force-app/main/default/objects/Session__c/fields/Sum_Of_Purchase_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Sum_Of_Purchase_Line_Items__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sum Of Purchase Line Items</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>