force-app/main/default/objects/Session__c/fields/Times__c.field-meta.xml
<CustomField>
    <fullName>Times__c</fullName>
    <formula>IF( RecordType.DeveloperName &lt;&gt; &apos;Adhoc_Support&apos;, LEFT(TEXT(Start__c),5) &amp; &quot; - &quot; &amp; LEFT(TEXT(End__c),5), IF(Contact_Hours__c &lt; 1, &quot;0&quot;, &quot;&quot;) &amp; TEXT(Contact_Hours__c) &amp; &apos; hours&apos;)</formula>
    <label>Times</label>
    <type>Text</type>
</CustomField>