force-app/main/default/objects/Session__c/fields/Venue_Booking_Status__c.field-meta.xml
<CustomField>
    <fullName>Venue_Booking_Status__c</fullName>
    <label>Venue Booking Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Booked</fullName>
                <default>true</default>
                <label>Not Booked</label>
            </value>
            <value>
                <fullName>Booking Requested</fullName>
            </value>
            <value>
                <fullName>Booked</fullName>
            </value>
            <value>
                <fullName>Unable to Book</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>