force-app/main/default/objects/Session__c/fields/Venue_Client_Link__c.field-meta.xml
<CustomField>
    <fullName>Venue_Client_Link__c</fullName>
    <description>Used in &quot;Reunion Confirmed Public&quot;, Reunion &quot;Confirmed Public No Venue&quot; email templates.</description>
    <formula>Venue__r.Client_Link__c</formula>
    <label>Venue Client Link</label>
    <type>Text</type>
</CustomField>